<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"

                android:padding="@dimen/_5sdp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/DetailsTitle"
                        android:text="@string/detail_release_date" />

                    <TextView
                        android:id="@+id/releaseDateTextView"
                        style="@style/DetailsBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Release Date: "
                        android:textColor="#000000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </LinearLayout>

                <Button
                    android:id="@+id/trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:background="@drawable/button"
                    android:text="Watch trailer"
                    android:textColor="#FFFFFF"
                    app:backgroundTint="#61C3F2"
                    app:icon="@drawable/play"
                    app:iconGravity="textStart"
                    app:iconSize="24dp"
                    app:iconTint="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>


            <TextView
                style="@style/DetailsTitle"
                android:text="@string/detail_overview" />

            <TextView
                android:id="@+id/overviewTextView"
                style="@style/DetailsBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Release Date: "
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/background_shape"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/DetailsTitle"
                        android:text="@string/detail_budget" />

                    <TextView
                        android:id="@+id/budgetTextView"
                        style="@style/DetailsBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Release Date: "
                        android:textColor="#000000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/background_shape"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/DetailsTitle"
                        android:text="@string/detail_revenu" />

                    <TextView
                        android:id="@+id/revenueTextView"
                        style="@style/DetailsBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Release Date: "
                        android:textColor="#000000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

            </LinearLayout>


            <TextView
                style="@style/DetailsTitle"
                android:text="@string/detail_writer" />

            <TextView
                android:id="@+id/writersTextView"
                style="@style/DetailsBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Writer: "
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/DetailsTitle"
                android:text="@string/detail_director" />

            <TextView
                android:id="@+id/directorTextView"
                style="@style/DetailsBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Director: "
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/DetailsTitle"
                        android:text="@string/detail_poster" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/seeallposter"
                        style="@style/DetailsTitle"
                        android:text="@string/seeall"
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagesListRecyclerposter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/DetailsTitle"
                        android:text="@string/detail_backdrops" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/seeallbackdrops"
                        style="@style/DetailsTitle"
                        android:text="@string/seeall"
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagesListRecyclerbackdrops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView

                        style="@style/DetailsTitle"
                        android:text="@string/detail_Logos" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/DetailsTitle"
                        android:text="@string/seeall"
                        android:id="@+id/seealllogos"
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagesListRecyclerLogos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>
    </ScrollView>




    <!-- Add more TextViews for other details as needed -->

</androidx.constraintlayout.widget.ConstraintLayout>